fix: text alignment

--- a/weread-enhancer/rules/text-align-start.css
+++ b/weread-enhancer/rules/text-align-start.css
@@ -1,6 +1,4 @@
-.wr_horizontalReader .readerChapterContent,
-.wr_horizontalReader .readerChapterContent *,
 .readerChapterContent,
 .readerChapterContent * {
-  text-align: start;
+  text-align: left !important;
 }
